# hvordan-sier-jeg-samisk

./: .gitignore  README.md  package-lock.json  package.json  pairflow.toml
.github/: copilot-instructions.md
.github/instructions/: backend-runtime.instructions.md  web-client.instructions.md
.github/prompts/: smoke-check.prompt.md
.pairflow/runtime/: pass-validation-recovery-document_first.json  sessions.json
apps/api/: .coverage  .env.example  pyproject.toml
apps/api/app/: dependencies.py  domain.py  main.py  state.py
apps/api/app/api/v1/: router.py
apps/api/app/api/v1/routes/: capabilities.py  health.py  jobs.py  pipeline.py  synthesize.py  transcribe.py  translate.py  variants.py  voices.py
apps/api/app/core/: runtime_readiness.py  settings.py
apps/api/app/pipeline/: service.py
apps/api/app/providers/asr/: nb_whisper.py
apps/api/app/providers/phonemization/: __init__.py  base.py  sma.py  sme.py  smj.py
apps/api/app/providers/speech/: common.py  registry.py  sma.py  sme.py  smj.py
apps/api/app/providers/translation/: tahetorn.py
apps/api/app/scripts/: setup_divvun_tts.py  smoke_nb_whisper.py  smoke_tahetorn.py  smoke_tts.py
apps/api/hvordan_sier_jeg_samisk_api.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
apps/api/tests/: conftest.py  test_domain_models.py  test_phonemization.py  test_routes_smoke.py
apps/web/: index.html  package.json  vite.config.ts
infra/compose/: compose.cpu.yml  compose.cuda.yml  compose.rocm.yml  compose.spark.yml
infra/containers/: api.Dockerfile  inference.cuda.Dockerfile  (+1 more)
(+23 files in other folders)
